# dump

./: .gitignore  README.md  convertion-tools.md  getperms.vbs  macro  profile-pic.sh  qrgen.sh  xdg-setup.sh
android-tweaks/: build.prop.web
archive/2WayRecyclerView/: settings.gradle
archive/AutoDoc/: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
archive/AutoDoc/client/: CMakeLists.txt  autodoc.cpp  layout.h  lp.h  shell.h  ui.h
archive/AutoDoc/daemon/: CMakeLists.txt  autodocd.cpp  config.h  lp.h  shell.h
archive/AutoDoc/fl/: autodoc  autodoc.cxx  autodoc.h
archive/Baby/: baby.xd
archive/Balance/: expense manager.studio
archive/Calculator/: AUTHORS.md  LICENSE.md  README.md
archive/Caliber/: ProfileActivity.java
archive/Echo/: echo.studio  nope2.studio
archive/Hades/: .gitmodules  CMakeLists.txt  README.md  config.h.in  hades.cpp  hadesd.cpp  init.h  ui.h
archive/Healthcare App/: Emergency Medical Healthcare.pptx  Machine Learning in Health Care.pptx  Medfocus.xd
archive/LP/: CMakeLists.txt  README.md
archive/LP/include/: lp.h
archive/LP/src/: lp.cpp
archive/Node/: .gitignore  CMakeLists.txt  README.md  config.h.in
archive/Node/include/Node/: Events.hpp  Node.hpp
archive/Node/include/Node/listener/: OnEventListener.hpp
archive/Node/src/: Node.cpp
archive/Node/test/: node_test.cpp
archive/PenFight/: .gitignore
archive/Ping/: CMakeLists.txt  README.md  ping.cpp
archive/Ping/src/: Ping.cpp
archive/ProjectManager/: .gitmodules  CMakeLists.txt  project_manager.cpp
archive/ProjectManager/cmake/: FindGTKmm.cmake
archive/ProjectManager/include/: PMAEvent.hpp  ProjectManager.hpp
archive/ProjectManager/src/: ProjectManager.cpp
archive/ProjectManagerCore/: CMakeLists.txt  README.md  project_manager_test.cpp
archive/ProjectManagerCore/include/: Operation.hpp  PMEvent.hpp  ProjectManagerCore.hpp  Query.hpp
archive/ProjectManagerCore/include/model/: Project.hpp
archive/ProjectManagerCore/src/: Operation.cpp  ProjectManagerCore.cpp  Query.cpp
archive/QuizMaster/: .gitignore  build.gradle
archive/RideShare-Demo/: .gitignore  README.md  build.gradle
archive/SALBM/: README.md  board.cpp  in
archive/TN/: CMakeLists.txt
archive/TN/src/: TN.hpp  TNConvert.hpp  TNDraw.hpp  TNExtract.hpp  TNMatch.hpp  TNProcess.hpp  main.cpp
archive/TN/src/model/: Pos.hpp  TNExcel.hpp  TNImage.hpp
archive/TN/src/view/: View.hpp
archive/Time Leap/: Assembly-CSharp.csproj  Time Leap.sln
archive/bad_prototypes/: Buffer_.pptx  Ex 14 - Development of a reasonably sized dynamically loadable kernel module for Linux kernel.docx  MSW_A4_format.docx  tastebuds.xd
archive/cz_rideshare/: RideShare.xd  czsm_project.md  security_concerns_in_social_logins.md  ui_design_report.md
archive/documents/: Buffer .pptx  MSW_A4_format.doc
archive/healthcare-server/: .gitignore  index.js  package-lock.json  package.json
archive/imad-app/: server.js
archive/j7_kernel_conf/: Modular-Android-Project.md  boot.txt  config-samsung-j7xelte.armv7  test.txt
archive/me/: index.css  index.html  index.js  package-lock.json  package.json
archive/net_test/: CMakeLists.txt  Node.h  README.md  client_test.c  config.h  network_utils.h  server.cpp  server_test.c
archive/random/: frogjumping.cpp
archive/smart-mirror-boot/: .bash_profile  .bashrc  .gitmodules
archive/solo/solo/: CMakeLists.txt  default.cmake  soloconfig.h.in
archive/solo/solo/include/solo/: ConnectionParams.hpp  Network.hpp  NetworkEvent.hpp  NetworkManager.hpp  Node.hpp  NodeManager.hpp  Query.hpp  SOLO.hpp  SoloLooper.hpp  WifiNetwork.hpp
archive/solo/solo/include/solo/listener/: OnReadListener.hpp  OnWriteListener.hpp
archive/solo/solo/include/solo/model/: Message.hpp
archive/solo/solo/src/: solo.cpp
archive/solo/solo/src/solo/: ConnectionParams.cpp  Network.cpp  NetworkManager.cpp  Node.cpp  NodeManager.cpp  Query.cpp  SOLO.cpp  SoloLooper.cpp  WifiNetwork.cpp
archive/solo/test-lib/: CMakeLists.txt
archive/solo/test-lib/include/: lol.hpp
archive/solo/test-lib/src/: lol.cpp
archive/wireless-adapter/code/forwarder/: BLUETOOTH_IMPLEMENTATION.md  CMakeLists.txt  IMPLEMENTATION.md  IP_IMPLEMENTATON.md  NetworkFactory.hpp  Operation.hpp  README.md  Shell.hpp  depinstall  forwarder.cpp
archive/wireless-adapter/code/forwarder/include/: Configuration.hpp  ConfigurationBuilder.hpp  Connector.hpp  Forwarder.hpp  Log.hpp  NetworkController.hpp
archive/wireless-adapter/code/forwarder/include/device/: BluetoothDevice.hpp  ConsoleDevice.hpp  Device.hpp  IPDevice.hpp  ZWaveDevice.hpp  ZigBeeDevice.hpp
archive/wireless-adapter/code/forwarder/include/medium/: Medium.hpp  WiFi.hpp
archive/wireless-adapter/code/forwarder/include/model/: DeviceInfo.hpp  NetworkConfiguration.hpp
archive/wireless-adapter/code/forwarder/include/network/: Bluetooth.hpp  Console.hpp  IP.hpp  Network.hpp  NetworkIndexer.hpp  ZWave.hpp  ZigBee.hpp
archive/wireless-adapter/code/left_initiator/: CMakeLists.txt  left_initiator.cpp
archive/wireless-adapter/code/right_initiator/: Bluetooth.hpp  CMakeLists.txt  GPIO.hpp  LED.hpp  right_initiator.cpp
c/: hm.c  metal.m
gpg/: decrypt-all-keys.sh
ios-test/: .vimrc  CMakeLists.txt  README  compile.sh  main.cpp
java/: FirestoreList.java
neo/: android-undead-xda.txt  init.vim  piano-roll.sh
photos/: optimize.sh  reduce-size.sh  when.sh
random/: FirestoreList.java  Wakey.xd
repo/: rm-git.sh
retardation/: browser.sh
retardation/uxl/TrueUI/: CMakeLists.txt
retardation/uxl/TrueUI/include/TrueUI/: TrueUI.hpp  temp.hpp
retardation/uxl/TrueUI/src/: TrueUI.cpp  temp.cpp
scoop-services/: install-service.ps1  test-this-on-normal-user.txt  uninstall-service.ps1
sh/: blog-permalink.sh  man2readme.sh  tts-repeat.sh  wifi-connect.sh
wifi/: .vimrc  CMakeLists.txt  swifi.c  swifi.h  swifi_test.c  wifi.c  wifi.h  wifi.txt  wifi_test.c  win32.txt
wifi/private/: nativewifi.c  nativewifi.h  swifiprivate.h  wifi.h
win32-docs/: CMakeLists.txt  wifi.txt  win32-accesstokens.txt  win32-permissions.txt  win32.txt
windows/: registry-change.ps1
(+1264 files in other folders)
